--- a/index.html
+++ b/index.html
@@ -31,64 +31,74 @@
         Logi<span>Track</span>
       </a>
       
-      <nav>
-        <ul>
-          <li class="dropdown">
-            <a href="#">Solutions <i class="fas fa-chevron-down"></i></a>
-            <div class="dropdown-content">
-              <div class="dropdown-grid">
-                <!-- Transportation Column -->
-                <div class="dropdown-column">
-                  <h3>Transportation</h3>
-                  <ul>
-                    <li><a href="#">Sea freight</a></li>
-                    <li><a href="#">Air freight</a></li>
-                    <li><a href="#">Inland trucking & Cross border</a></li>
-                    <li><a href="#">Rail freight</a></li>
-                    <li><a href="#">Break bulk & OOG (Out-of-Gauge)</a></li>
-                  </ul>
-                </div>
+      <!-- Add hamburger button -->
+      <button class="hamburger" aria-label="Menu">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
+      
+      <!-- Add mobile nav wrapper -->
+      <div class="nav-wrapper">
+        <nav>
+          <ul>
+            <li class="dropdown">
+              <a href="#">Solutions <i class="fas fa-chevron-down"></i></a>
+              <div class="dropdown-content">
+                <div class="dropdown-grid">
+                  <!-- Transportation Column -->
+                  <div class="dropdown-column">
+                    <h3>Transportation</h3>
+                    <ul>
+                      <li><a href="#">Sea freight</a></li>
+                      <li><a href="#">Air freight</a></li>
+                      <li><a href="#">Inland trucking & Cross border</a></li>
+                      <li><a href="#">Rail freight</a></li>
+                      <li><a href="#">Break bulk & OOG (Out-of-Gauge)</a></li>
+                    </ul>
+                  </div>
 
-                <!-- Logistics Column -->
-                <div class="dropdown-column">
-                  <h3>Logistics and Supply chain</h3>
-                  <ul>
-                    <li><a href="#">Customs brokerage</a></li>
-                    <li><a href="#">Cargo insurance</a></li>
-                    <li><a href="#">Warehousing</a></li>
-                    <li><a href="#">E-Commerce (Air-express)</a></li>
-                  </ul>
-                </div>
+                  <!-- Logistics Column -->
+                  <div class="dropdown-column">
+                    <h3>Logistics and Supply chain</h3>
+                    <ul>
+                      <li><a href="#">Customs brokerage</a></li>
+                      <li><a href="#">Cargo insurance</a></li>
+                      <li><a href="#">Warehousing</a></li>
+                      <li><a href="#">E-Commerce (Air-express)</a></li>
+                    </ul>
+                  </div>
 
-                <!-- Industries Column -->
-                <div class="dropdown-column">
-                  <h3>Industries</h3>
-                  <ul>
-                    <li><a href="#">Food & Beverage</a></li>
-                    <li><a href="#">Garment & Footwear</a></li>
-                    <li><a href="#">Furniture & Houseware</a></li>
-                    <li><a href="#">Metal & Construction materials</a></li>
-                    <li><a href="#">Machinery & Equipment</a></li>
-                    <li><a href="#">Healthcare, Cosmetics & Medical supply</a></li>
-                    <li><a href="#">Dangerous goods</a></li>
-                    <li><a href="#">Automotives</a></li>
-                    <li><a href="#">Electronics</a></li>
-                  </ul>
+                  <!-- Industries Column -->
+                  <div class="dropdown-column">
+                    <h3>Industries</h3>
+                    <ul>
+                      <li><a href="#">Food & Beverage</a></li>
+                      <li><a href="#">Garment & Footwear</a></li>
+                      <li><a href="#">Furniture & Houseware</a></li>
+                      <li><a href="#">Metal & Construction materials</a></li>
+                      <li><a href="#">Machinery & Equipment</a></li>
+                      <li><a href="#">Healthcare, Cosmetics & Medical supply</a></li>
+                      <li><a href="#">Dangerous goods</a></li>
+                      <li><a href="#">Automotives</a></li>
+                      <li><a href="#">Electronics</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-            </div>
-          </li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#sustainability">Sustainability</a></li>
-          <li><a href="#news">Insights</a></li>
-          <li><a href="#support">Support</a></li>
-        </ul>
-        <div class="lang-selector">
-          <a href="#">VIE</a>
-          <span class="divider">|</span>
-          <a href="#" class="active">ENG</a>
-        </div>
-      </nav>
+            </li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#sustainability">Sustainability</a></li>
+            <li><a href="#news">Insights</a></li>
+            <li><a href="#support">Support</a></li>
+          </ul>
+          <div class="lang-selector">
+            <a href="#">VIE</a>
+            <span class="divider">|</span>
+            <a href="#" class="active">ENG</a>
+          </div>
+        </nav>
+      </div>
     </div>
   </header>
 
