--- a/index.html
+++ b/index.html
@@ -612,18 +612,19 @@
     <!-- Add copyright section -->
     <div class="copyright">
       <div class="container">
-        <div class="copyright-content">
-          <p style="color: #ffffff;">&copy; 2024 LogiTrack Group. All Rights Reserved.</p>
-          <div class="footer-links">
-            <a href="#">Terms & Conditions</a>
-            <span class="divider">|</span>
-            <a href="#">Privacy Policy</a>
-            <span class="divider">|</span>
-            <a href="#">Cookie Policy</a>
+          <div class="copyright-content">
+              <div class="copyright-text">
+                  <i class="far fa-copyright"></i>
+                  <span data-translate="copyright">2024 LogiTrack. All rights reserved.</span>
+              </div>
+              <div class="footer-links">
+                  <a href="terms.html" data-translate="terms">Terms & Conditions</a>
+                  <a href="privacy.html" data-translate="privacy">Privacy Policy</a>
+                  <a href="cookies.html" data-translate="cookies">Cookie Policy</a>
+              </div>
           </div>
-        </div>
       </div>
-    </div>
+  </div>
   </footer>
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
