--- a/privacy.html
+++ b/privacy.html
@@ -30,17 +30,17 @@
                             <a href="#" class="dropdown-toggle">Solutions <i class="fas fa-chevron-down"></i></a>
                             <div class="dropdown-content">
                                 <div class="dropdown-grid">
-                                    <!-- Transportation Column -->
-                                    <div class="dropdown-column">
+                                     <!-- Transportation Column -->
+                                     <div class="dropdown-column">
                                         <h3>Transportation</h3>
                                         <ul>
-                                            <li><a href="#">Sea freight</a></li>
-                                            <li><a href="#">Air freight</a></li>
-                                            <li><a href="#">Inland trucking & Cross border</a></li>
-                                            <li><a href="#">Rail freight</a></li>
-                                            <li><a href="#">Break bulk & OOG (Out-of-Gauge)</a></li>
+                                            <li><a href="transportation.html#sea-freight">Sea freight</a></li>
+                                            <li><a href="transportation.html#air-freight">Air freight</a></li>
+                                            <li><a href="transportation.html#inland-trucking">Inland trucking & Cross border</a></li>
+                                            <li><a href="transportation.html#rail-freight">Rail freight</a></li>
+                                            <li><a href="transportation.html#break-bulk">Break bulk & OOG (Out-of-Gauge)</a></li>
                                         </ul>
-                                    </div>
+                                    </div>  
 
                                     <!-- Logistics Column -->
                                     <div class="dropdown-column">
