--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <a href="#" class="logo">
+      <a href="index.html" class="logo">
         Logi<span>Track</span>
       </a>
       
@@ -62,26 +62,27 @@
                   <div class="dropdown-column">
                     <h3>Logistics and Supply chain</h3>
                     <ul>
-                      <li><a href="#">Customs brokerage</a></li>
-                      <li><a href="#">Cargo insurance</a></li>
-                      <li><a href="#">Warehousing</a></li>
-                      <li><a href="#">E-Commerce (Air-express)</a></li>
+                        <li><a href="logistics-supply-chain.html#customs">Customs brokerage</a></li>
+                        <li><a href="logistics-supply-chain.html#insurance">Cargo insurance</a></li>
+                        <li><a href="logistics-supply-chain.html#warehousing">Warehousing</a></li>
+                        <li><a href="logistics-supply-chain.html#ecommerce">E-Commerce (Air-express)</a></li>
                     </ul>
-                  </div>
+                </div>
 
+                  <!-- Industries Column -->
                   <!-- Industries Column -->
                   <div class="dropdown-column">
                     <h3>Industries</h3>
                     <ul>
-                      <li><a href="#">Food & Beverage</a></li>
-                      <li><a href="#">Garment & Footwear</a></li>
-                      <li><a href="#">Furniture & Houseware</a></li>
-                      <li><a href="#">Metal & Construction materials</a></li>
-                      <li><a href="#">Machinery & Equipment</a></li>
-                      <li><a href="#">Healthcare, Cosmetics & Medical supply</a></li>
-                      <li><a href="#">Dangerous goods</a></li>
-                      <li><a href="#">Automotives</a></li>
-                      <li><a href="#">Electronics</a></li>
+                        <li><a href="industries.html#food-beverage">Food & Beverage</a></li>
+                        <li><a href="industries.html#garment-footwear">Garment & Footwear</a></li>
+                        <li><a href="industries.html#furniture">Furniture & Houseware</a></li>
+                        <li><a href="industries.html#construction">Metal & Construction materials</a></li>
+                        <li><a href="industries.html#machinery">Machinery & Equipment</a></li>
+                        <li><a href="industries.html#healthcare">Healthcare, Cosmetics & Medical supply</a></li>
+                        <li><a href="industries.html#dangerous-goods">Dangerous goods</a></li>
+                        <li><a href="industries.html#automotive">Automotives</a></li>
+                        <li><a href="industries.html#electronics">Electronics</a></li>
                     </ul>
                   </div>
                 </div>
