--- a/transportation.html
+++ b/transportation.html
@@ -29,20 +29,46 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-translate="solutions">Solutions <i class="fas fa-chevron-down"></i></a>
                             <div class="dropdown-content">
-                                <div class="dropdown-grid">
-                                    <!-- Transportation Column -->
-                                    <div class="dropdown-column">
-                                        <h3 data-translate="dropdown.transportation.title">Transportation</h3>
-                                        <ul>
-                                            <li><a href="transportation.html#sea-freight" data-translate="dropdown.transportation.items.seaFreight">Sea freight</a></li>
-                                            <li><a href="transportation.html#air-freight" data-translate="dropdown.transportation.items.airFreight">Air freight</a></li>
-                                            <li><a href="transportation.html#inland-trucking" data-translate="dropdown.transportation.items.inlandTrucking">Inland trucking & Cross border</a></li>
-                                            <li><a href="transportation.html#rail-freight" data-translate="dropdown.transportation.items.railFreight">Rail freight</a></li>
-                                            <li><a href="transportation.html#break-bulk" data-translate="dropdown.transportation.items.breakBulk">Break bulk & OOG (Out-of-Gauge)</a></li>
-                                        </ul>
-                                    </div>
-                                    <!-- ... existing dropdown content ... -->
+                              <div class="dropdown-grid">
+                                <!-- Transportation Column -->
+                                <div class="dropdown-column">
+                                  <h3>Transportation</h3>
+                                  <ul>
+                                    <li><a href="transportation.html#sea-freight">Sea freight</a></li>
+                                    <li><a href="transportation.html#air-freight">Air freight</a></li>
+                                    <li><a href="transportation.html#inland-trucking">Inland trucking & Cross border</a></li>
+                                    <li><a href="transportation.html#rail-freight">Rail freight</a></li>
+                                    <li><a href="transportation.html#break-bulk">Break bulk & OOG (Out-of-Gauge)</a></li>
+                                  </ul>
                                 </div>
+              
+                                <!-- Logistics Column -->
+                                <div class="dropdown-column">
+                                  <h3>Logistics and Supply chain</h3>
+                                  <ul>
+                                      <li><a href="logistics-supply-chain.html#customs">Customs brokerage</a></li>
+                                      <li><a href="logistics-supply-chain.html#insurance">Cargo insurance</a></li>
+                                      <li><a href="logistics-supply-chain.html#warehousing">Warehousing</a></li>
+                                      <li><a href="logistics-supply-chain.html#ecommerce">E-Commerce (Air-express)</a></li>
+                                  </ul>
+                              </div>
+              
+                                <!-- Industries Column -->
+                                <div class="dropdown-column">
+                                  <h3>Industries</h3>
+                                  <ul>
+                                      <li><a href="industries.html#food-beverage">Food & Beverage</a></li>
+                                      <li><a href="industries.html#garment-footwear">Garment & Footwear</a></li>
+                                      <li><a href="industries.html#furniture">Furniture & Houseware</a></li>
+                                      <li><a href="industries.html#construction">Metal & Construction materials</a></li>
+                                      <li><a href="industries.html#machinery">Machinery & Equipment</a></li>
+                                      <li><a href="industries.html#healthcare">Healthcare, Cosmetics & Medical supply</a></li>
+                                      <li><a href="industries.html#dangerous-goods">Dangerous goods</a></li>
+                                      <li><a href="industries.html#automotive">Automotives</a></li>
+                                      <li><a href="industries.html#electronics">Electronics</a></li>
+                                  </ul>
+                                </div>
+                              </div>
                             </div>
                         </li>
                         <li><a href="index.html#about" data-translate="aboutUs">About Us</a></li>
@@ -613,7 +639,24 @@
                     <h3>CONNECT WITH US</h3>
                     <h2>Social Media</h2>
                     <div class="social-links">
-                        <!-- ... existing social links ... -->
+                      <a href="#" class="social-btn facebook" aria-label="Facebook">
+                        <i class="fab fa-facebook-f"></i>
+                      </a>
+                      <a href="#" class="social-btn twitter" aria-label="Twitter">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                      <a href="#" class="social-btn tiktok" aria-label="TikTok">
+                        <i class="fab fa-tiktok"></i>
+                      </a>
+                      <a href="#" class="social-btn youtube" aria-label="YouTube">
+                        <i class="fab fa-youtube"></i>
+                      </a>
+                      <a href="#" class="social-btn linkedin" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin-in"></i>
+                      </a>
+                      <a href="#" class="social-btn instagram" aria-label="Instagram">
+                        <i class="fab fa-instagram"></i>
+                      </a>
                     </div>
                     <a href="{link}" title="Chứng nhận Tick Đỏ ECheck Verified" target="_blank">
                         <img style="height: 48px; width: auto;" src="https://echeck.numbala.com/imgs/echeck1.svg" alt="Chứng nhận Tick Đỏ ECheck Verified">
