--- a/terms.html
+++ b/terms.html
@@ -30,46 +30,47 @@
                             <a href="#" class="dropdown-toggle">Solutions <i class="fas fa-chevron-down"></i></a>
                             <div class="dropdown-content">
                                 <div class="dropdown-grid">
-                                    <!-- Transportation Column -->
-                                    <div class="dropdown-column">
-                                        <h3>Transportation</h3>
-                                        <ul>
-                                            <li><a href="transportation.html#sea-freight">Sea freight</a></li>
-                                            <li><a href="transportation.html#air-freight">Air freight</a></li>
-                                            <li><a href="transportation.html#inland-trucking">Inland trucking & Cross border</a></li>
-                                            <li><a href="transportation.html#rail-freight">Rail freight</a></li>
-                                            <li><a href="transportation.html#break-bulk">Break bulk & OOG (Out-of-Gauge)</a></li>
-                                        </ul>
-                                    </div>      
-
-                                    <!-- Logistics Column -->
-                                    <div class="dropdown-column">
-                                        <h3>Logistics and Supply chain</h3>
-                                        <ul>
-                                            <li><a href="#">Customs brokerage</a></li>
-                                            <li><a href="#">Cargo insurance</a></li>
-                                            <li><a href="#">Warehousing</a></li>
-                                            <li><a href="#">E-Commerce (Air-express)</a></li>
-                                        </ul>
-                                    </div>
-
-                                    <!-- Industries Column -->
-                                    <div class="dropdown-column">
-                                        <h3>Industries</h3>
-                                        <ul>
-                                            <li><a href="#">Food & Beverage</a></li>
-                                            <li><a href="#">Garment & Footwear</a></li>
-                                            <li><a href="#">Furniture & Houseware</a></li>
-                                            <li><a href="#">Metal & Construction materials</a></li>
-                                            <li><a href="#">Machinery & Equipment</a></li>
-                                            <li><a href="#">Healthcare, Cosmetics & Medical supply</a></li>
-                                            <li><a href="#">Dangerous goods</a></li>
-                                            <li><a href="#">Automotives</a></li>
-                                            <li><a href="#">Electronics</a></li>
-                                        </ul>
-                                    </div>
+                                  <!-- Transportation Column -->
+                                  <div class="dropdown-column">
+                                    <h3>Transportation</h3>
+                                    <ul>
+                                      <li><a href="transportation.html#sea-freight">Sea freight</a></li>
+                                      <li><a href="transportation.html#air-freight">Air freight</a></li>
+                                      <li><a href="transportation.html#inland-trucking">Inland trucking & Cross border</a></li>
+                                      <li><a href="transportation.html#rail-freight">Rail freight</a></li>
+                                      <li><a href="transportation.html#break-bulk">Break bulk & OOG (Out-of-Gauge)</a></li>
+                                    </ul>
+                                  </div>
+                
+                                  <!-- Logistics Column -->
+                                  <div class="dropdown-column">
+                                    <h3>Logistics and Supply chain</h3>
+                                    <ul>
+                                        <li><a href="logistics-supply-chain.html#customs">Customs brokerage</a></li>
+                                        <li><a href="logistics-supply-chain.html#insurance">Cargo insurance</a></li>
+                                        <li><a href="logistics-supply-chain.html#warehousing">Warehousing</a></li>
+                                        <li><a href="logistics-supply-chain.html#ecommerce">E-Commerce (Air-express)</a></li>
+                                    </ul>
                                 </div>
-                            </div>
+                
+                                  <!-- Industries Column -->
+                                  <!-- Industries Column -->
+                                  <div class="dropdown-column">
+                                    <h3>Industries</h3>
+                                    <ul>
+                                        <li><a href="industries.html#food-beverage">Food & Beverage</a></li>
+                                        <li><a href="industries.html#garment-footwear">Garment & Footwear</a></li>
+                                        <li><a href="industries.html#furniture">Furniture & Houseware</a></li>
+                                        <li><a href="industries.html#construction">Metal & Construction materials</a></li>
+                                        <li><a href="industries.html#machinery">Machinery & Equipment</a></li>
+                                        <li><a href="industries.html#healthcare">Healthcare, Cosmetics & Medical supply</a></li>
+                                        <li><a href="industries.html#dangerous-goods">Dangerous goods</a></li>
+                                        <li><a href="industries.html#automotive">Automotives</a></li>
+                                        <li><a href="industries.html#electronics">Electronics</a></li>
+                                    </ul>
+                                  </div>
+                                </div>
+                              </div>
                         </li>
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#sustainability">Sustainability</a></li>
