--- a/logistics-supply-chain.html
+++ b/logistics-supply-chain.html
@@ -48,8 +48,8 @@
                                   <div class="dropdown-column">
                                     <h3>Logistics and Supply chain</h3>
                                     <ul>
-                                        <li><a href="logistics-supply-chain.html#customs">Customs brokerage</a></li>
-                                        <li><a href="logistics-supply-chain.html#insurance">Cargo insurance</a></li>
+                                        <li><a href="logistics-supply-chain.html#customs-brokerage">Customs Brokerage</a></li>
+                                        <li><a href="logistics-supply-chain.html#cargo-insurance">Cargo Insurance</a></li>
                                         <li><a href="logistics-supply-chain.html#warehousing">Warehousing</a></li>
                                         <li><a href="logistics-supply-chain.html#ecommerce">E-Commerce (Air-express)</a></li>
                                     </ul>
@@ -109,7 +109,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#w/Users/baolamabcd/Downloads/Logistics-main/js/translations.jsarehousing" class="transport-nav-item">
+                    <a href="#warehousing" class="transport-nav-item">
                         <i class="fas fa-warehouse"></i>
                         <span data-translate="logistics.services.warehousing.name">Warehousing</span>
                     </a>
