VIE/EN transportation

--- a/logistics-supply-chain.html
+++ b/logistics-supply-chain.html
@@ -177,6 +177,36 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="service-types">
+                            <h3 data-translate="logistics.services.customs.options.title">Service Options</h3>
+                            <div class="types-grid">
+                                <div class="type-card">
+                                    <div class="type-header">
+                                        <i class="fas fa-file-import"></i>
+                                        <h4 data-translate="logistics.services.customs.options.import.title">Import Customs</h4>
+                                    </div>
+                                    <ul class="type-features">
+                                        <li data-translate="logistics.services.customs.options.import.features.0">Import declaration</li>
+                                        <li data-translate="logistics.services.customs.options.import.features.1">Duty calculation</li>
+                                        <li data-translate="logistics.services.customs.options.import.features.2">Documentation review</li>
+                                        <li data-translate="logistics.services.customs.options.import.features.3">Compliance check</li>
+                                    </ul>
+                                </div>
+                                <div class="type-card">
+                                    <div class="type-header">
+                                        <i class="fas fa-file-export"></i>
+                                        <h4 data-translate="logistics.services.customs.options.export.title">Export Customs</h4>
+                                    </div>
+                                    <ul class="type-features">
+                                        <li data-translate="logistics.services.customs.options.export.features.0">Export documentation</li>
+                                        <li data-translate="logistics.services.customs.options.export.features.1">License management</li>
+                                        <li data-translate="logistics.services.customs.options.export.features.2">Certificate handling</li>
+                                        <li data-translate="logistics.services.customs.options.export.features.3">Customs consulting</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
@@ -233,6 +263,36 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="service-types">
+                            <h3 data-translate="logistics.services.insurance.options.title">Service Options</h3>
+                            <div class="types-grid">
+                                <div class="type-card">
+                                    <div class="type-header">
+                                        <i class="fas fa-shield-alt"></i>
+                                        <h4 data-translate="logistics.services.insurance.options.standard.title">Standard Coverage</h4>
+                                    </div>
+                                    <ul class="type-features">
+                                        <li data-translate="logistics.services.insurance.options.standard.features.0">Basic damage protection</li>
+                                        <li data-translate="logistics.services.insurance.options.standard.features.1">Loss coverage</li>
+                                        <li data-translate="logistics.services.insurance.options.standard.features.2">Transit insurance</li>
+                                        <li data-translate="logistics.services.insurance.options.standard.features.3">General liability</li>
+                                    </ul>
+                                </div>
+                                <div class="type-card">
+                                    <div class="type-header">
+                                        <i class="fas fa-star"></i>
+                                        <h4 data-translate="logistics.services.insurance.options.premium.title">Premium Coverage</h4>
+                                    </div>
+                                    <ul class="type-features">
+                                        <li data-translate="logistics.services.insurance.options.premium.features.0">All-risk coverage</li>
+                                        <li data-translate="logistics.services.insurance.options.premium.features.1">Door-to-door protection</li>
+                                        <li data-translate="logistics.services.insurance.options.premium.features.2">Priority claims handling</li>
+                                        <li data-translate="logistics.services.insurance.options.premium.features.3">Extended liability</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
@@ -274,7 +334,7 @@
                                     <p data-translate="logistics.services.warehousing.features.climate.description">Temperature-controlled storage</p>
                                 </div>
                                 <div class="feature-card">
-                                    <i class="fas fa-security"></i>
+                                    <i class="fas fa-shield-alt"></i>
                                     <h4 data-translate="logistics.services.warehousing.features.security.title">24/7 Security</h4>
                                     <p data-translate="logistics.services.warehousing.features.security.description">Advanced security systems</p>
                                 </div>
@@ -282,6 +342,36 @@
                                     <i class="fas fa-truck-loading"></i>
                                     <h4 data-translate="logistics.services.warehousing.features.crossdock.title">Cross-Docking</h4>
                                     <p data-translate="logistics.services.warehousing.features.crossdock.description">Efficient distribution</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="service-types">
+                            <h3 data-translate="logistics.services.warehousing.options.title">Service Options</h3>
+                            <div class="types-grid">
+                                <div class="type-card">
+                                    <div class="type-header">
+                                        <i class="fas fa-warehouse"></i>
+                                        <h4 data-translate="logistics.services.warehousing.options.standard.title">Standard Storage</h4>
+                                    </div>
+                                    <ul class="type-features">
+                                        <li data-translate="logistics.services.warehousing.options.standard.features.0">General storage space</li>
+                                        <li data-translate="logistics.services.warehousing.options.standard.features.1">Basic inventory management</li>
+                                        <li data-translate="logistics.services.warehousing.options.standard.features.2">Security monitoring</li>
+                                        <li data-translate="logistics.services.warehousing.options.standard.features.3">Loading/unloading</li>
+                                    </ul>
+                                </div>
+                                <div class="type-card">
+                                    <div class="type-header">
+                                        <i class="fas fa-cog"></i>
+                                        <h4 data-translate="logistics.services.warehousing.options.value.title">Value-Added Services</h4>
+                                    </div>
+                                    <ul class="type-features">
+                                        <li data-translate="logistics.services.warehousing.options.value.features.0">Pick and pack</li>
+                                        <li data-translate="logistics.services.warehousing.options.value.features.1">Kitting and assembly</li>
+                                        <li data-translate="logistics.services.warehousing.options.value.features.2">Quality inspection</li>
+                                        <li data-translate="logistics.services.warehousing.options.value.features.3">Inventory optimization</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -338,6 +428,36 @@
                                     <i class="fas fa-chart-line"></i>
                                     <h4 data-translate="logistics.services.ecommerce.features.analytics.title">Analytics</h4>
                                     <p data-translate="logistics.services.ecommerce.features.analytics.description">Performance insights</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="service-types">
+                            <h3 data-translate="logistics.services.ecommerce.options.title">Service Options</h3>
+                            <div class="types-grid">
+                                <div class="type-card">
+                                    <div class="type-header">
+                                        <i class="fas fa-box"></i>
+                                        <h4 data-translate="logistics.services.ecommerce.options.basic.title">Basic E-Commerce</h4>
+                                    </div>
+                                    <ul class="type-features">
+                                        <li data-translate="logistics.services.ecommerce.options.basic.features.0">Standard shipping</li>
+                                        <li data-translate="logistics.services.ecommerce.options.basic.features.1">Order processing</li>
+                                        <li data-translate="logistics.services.ecommerce.options.basic.features.2">Basic tracking</li>
+                                        <li data-translate="logistics.services.ecommerce.options.basic.features.3">Returns handling</li>
+                                    </ul>
+                                </div>
+                                <div class="type-card">
+                                    <div class="type-header">
+                                        <i class="fas fa-rocket"></i>
+                                        <h4 data-translate="logistics.services.ecommerce.options.premium.title">Premium E-Commerce</h4>
+                                    </div>
+                                    <ul class="type-features">
+                                        <li data-translate="logistics.services.ecommerce.options.premium.features.0">Express delivery</li>
+                                        <li data-translate="logistics.services.ecommerce.options.premium.features.1">Marketplace integration</li>
+                                        <li data-translate="logistics.services.ecommerce.options.premium.features.2">Advanced analytics</li>
+                                        <li data-translate="logistics.services.ecommerce.options.premium.features.3">Priority support</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
